# wind-turbines-project

./: .flake8  Build Wheel.py  README.md  pyproject.toml  requirements.txt  setup.py
config/: bronze_config.yaml  gold_config.yaml  silver_config.yaml
src/jobs/: clean_data.yml
src/medallion_framework/: __init__.py  cli.py
src/medallion_framework/core/: __init__.py  config.py  layer.py
src/medallion_framework/layers/bronze/: __init__.py  bronze_layer.py
src/medallion_framework/layers/gold/: __init__.py  gold_layer.py
src/medallion_framework/layers/silver/: __init__.py  silver_layer.py
src/medallion_framework/modules/: __init__.py
src/medallion_framework/modules/audit/: __init__.py  audit_utils.py
src/medallion_framework/modules/dq/: __init__.py  dqx_validator.py
src/medallion_framework/modules/security/: __init__.py  encryption.py  masker.py  tokenizer.py
src/medallion_framework/modules/utils/: __init__.py  transformations.py
src/my_pipeline/: pipeline.py
src/pipeline/: calculate_statistics.py  clean_data.py  config.py  define_anomalies.py  load_data.py  main.py  output_anomalies.py  output_cleaned.py  output_statistics.py  process_data.py  write_data.py
src/tests/: test_clean_data.py
