[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wind_turbines_project"
version = "0.1.2"
description = "A project for processing wind turbine data"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.12"
dependencies = [
    "pyspark",
    "pytest",
    "delta-spark",
]

[project.scripts]
run_pipeline = "pipeline.main:main"

[tool.setuptools.packages.find]
where = ["src"]